--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -6,8 +6,7 @@
         width: 100%;
         margin: 0 auto;
         padding: 0 0 20vh 0;
-        // background-color: $overlay-blue-dark;
-        background-color: #fff;
+        background-color: $background-light;
         position: relative;
         // section header
         &-header {
