--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,8 @@ hamburger
   width: 100vw;
   padding-bottom: 15vh;
   margin: 0 auto;
-  background: linear-gradient(60deg, #29323c 0%, #485563 100%); }
+  background: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background: #fff; }
   #skills .skills-header {
     width: 100%;
     height: auto;
@@ -256,7 +257,6 @@ hamburger
     z-index: 30; }
   @media (max-width: 768px) {
     #skills .skills {
-      background: linear-gradient(60deg, #29323c 0%, #485563 100%);
       background-size: 200%; }
       #skills .skills::after {
         display: none; } }
@@ -1774,6 +1774,7 @@ body {
   height: 90vh;
   width: 100%;
   background-color: #29323c;
+  background-color: #fff;
   padding: 10vh 20vw;
   display: grid;
   place-items: center;
@@ -1834,10 +1835,29 @@ body {
     background: #fff; }
     .section-pad.pad-me figure {
       width: 50%;
-      position: relative; }
+      position: relative;
+      cursor: pointer;
+      isolation: isolate; }
       .section-pad.pad-me figure img {
         object-fit: cover;
-        border-radius: 5px; }
+        border-radius: 5px;
+        z-index: 1;
+        transition: .5s ease-in-out; }
+      .section-pad.pad-me figure::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../img/shakexblue-min.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: top;
+        z-index: -1;
+        transition: .5s ease-in; }
+      .section-pad.pad-me figure:hover img {
+        opacity: 0; }
     @media (max-width: 500px) {
       .section-pad.pad-me figure {
         width: 100%; } }
@@ -1877,7 +1897,7 @@ body {
   flex-direction: column-reverse;
   text-align: center;
   margin: 0 auto;
-  padding: 10vh 5vw;
+  padding: 0 5vw;
   background-color: #fff; }
   @media (min-width: 768px) {
     .about {
