--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -120,6 +120,7 @@
             text-align: center;
             transition: .3s;
             font-family: 'Gruppo', cursive;
+            text-shadow: 2px 2px 2px #000;
             position: relative;
             overflow: hidden;
             isolation: isolate;
