footer date objects

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -605,32 +605,33 @@
             // end of icon label pop up
         } 
         // end of social icons 
-        // bs21
-        #bs21 {
-            width: 100%;
-            text-align: center;
-                font-family: $font-ubuntu; 
-            p,
-            a {
-                color: $text-light;
-                font-size: 1.1em;
-                text-transform: capitalize;
-            }
-            a {
-                font-family: $font-gruppo;
-                color: $span-gold;
-                font-size: 1.3em;
-                &:hover {
-                    opacity: .9;
-                }
-            }
-            #date {
-                margin: .5em 0;
-                color: $text-light;
-                display: block;
-            }
-        }
-        // end of bs21
+       
     }
 }
+ // bs21
+ .bs21 {
+    width: 100%;
+    text-align: center;
+        font-family: $font-ubuntu; 
+    p,
+    a {
+        color: $text-light;
+        font-size: 1.1em;
+        text-transform: capitalize;
+    }
+    a {
+        font-family: $font-gruppo;
+        color: $span-gold;
+        font-size: 1.3em;
+        &:hover {
+            opacity: .9;
+        }
+    }
+    .date {
+        margin: .5em 0;
+        color: $text-light;
+        display: block;
+    }
+}
+// end of bs21
 // end of footer
