--- a/css/style.css
+++ b/css/style.css
@@ -1338,25 +1338,26 @@ hamburger
       #footer .footer .social-icon:hover a::before {
         opacity: 1;
         transform: translateY(0%); }
-    #footer .footer #bs21 {
-      width: 100%;
-      text-align: center;
-      font-family: "Ubuntu", sans-serif; }
-      #footer .footer #bs21 p,
-      #footer .footer #bs21 a {
-        color: #fff;
-        font-size: 1.1em;
-        text-transform: capitalize; }
-      #footer .footer #bs21 a {
-        font-family: "Gruppo", cursive;
-        color: #ead2a1;
-        font-size: 1.3em; }
-        #footer .footer #bs21 a:hover {
-          opacity: .9; }
-      #footer .footer #bs21 #date {
-        margin: .5em 0;
-        color: #fff;
-        display: block; }
+
+.bs21 {
+  width: 100%;
+  text-align: center;
+  font-family: "Ubuntu", sans-serif; }
+  .bs21 p,
+  .bs21 a {
+    color: #fff;
+    font-size: 1.1em;
+    text-transform: capitalize; }
+  .bs21 a {
+    font-family: "Gruppo", cursive;
+    color: #ead2a1;
+    font-size: 1.3em; }
+    .bs21 a:hover {
+      opacity: .9; }
+  .bs21 .date {
+    margin: .5em 0;
+    color: #fff;
+    display: block; }
 
 * {
   padding: 0;
