--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,7 +8,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 5vh 5vw;
+        padding: 5vh 2px;
+        @media (min-width: 1024px) {
+            padding: 5vh 5vw;
+            
+        }
         // section title
         .footer-section-title {
                 color: $span-gold;
@@ -22,6 +26,7 @@
         form {
             @media (min-width: 1024px) {
                 width: 50%;
+                border-radius: 5px;
             }
             background-color: $overlay-blue-dark;
             width: 100%;
@@ -30,7 +35,7 @@
             flex-direction: column;
             margin: 5vh auto;
             padding: 5vh 1em;
-            border-radius: 5px;
+            border-radius: 0;
             border: 1px solid $span-gold;
             font-family: $font-ubuntu;
             overflow: hidden;
@@ -159,11 +164,13 @@
         .socialMedia-links {
             @media (min-width: 1024px) {
                 width: 50%;
+                border-radius: 5px;
+
             }
             grid-template-columns: 1fr;
             background-color: $overlay-blue-dark;
             border: 1px solid $span-gold;
-            border-radius: 5px;
+            // border-radius: 0;
             width: 100%;
             margin: 2em 5vw;
             padding: 5vh 1em;
