test: hamburger active transtion

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,6 +14,7 @@ $text-light-d-trans: #ddda;
 $text-white-e: #eee;
 $text-white-d: #ddd;
 $text-lime: #bfee50;
+$text-light-hover: #fffa;
 
 // span and border
 $span-crimson: #dc143c;
