--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,90 @@ section title and section title reflect
 hamburger 
 
 */
+#header .hamburger {
+  font-size: 10px;
+  height: 4em;
+  width: 4em;
+  margin: 5px auto;
+  display: inline-block;
+  border-radius: 50%;
+  position: relative;
+  background: #29323c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  cursor: pointer;
+  transition: .3s ease; }
+  #header .hamburger.hamburger:after, #header .hamburger.hamburger:before {
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    transition: .5s ease; }
+  #header .hamburger.hamburger::after {
+    opacity: 1;
+    box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 2px #000a; }
+  #header .hamburger.hamburger:before {
+    border: .2em solid #fff;
+    opacity: 0;
+    animation: ham-pulse 2.5s ease infinite .5s; }
+
+@keyframes ham-pulse {
+  50% {
+    opacity: .7;
+    border-color: #ead2a1; }
+  100% {
+    opacity: 0;
+    transform: scale(1.18); } }
+  #header .hamburger.no-pulse.hamburger::before {
+    animation: none;
+    animation-fill-mode: forwards; }
+  #header .hamburger:hover::before, #header .hamburger:focus::before {
+    animation: none; }
+  #header .hamburger:hover::after, #header .hamburger:focus::after {
+    opacity: .6; }
+  #header .hamburger:active {
+    transform: scale(0.6);
+    transition: .3s; }
+  #header .hamburger .bar {
+    height: .2em;
+    width: 2em;
+    position: relative;
+    background-color: #f4f4f4;
+    border-radius: 50%;
+    z-index: -1;
+    transform-style: preserve-3d; }
+    #header .hamburger .bar::before, #header .hamburger .bar::after {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      bottom: 0;
+      background-color: #f4f4f4;
+      transition: .5s ease;
+      transform-style: preserve-3d; }
+    #header .hamburger .bar::before {
+      transform: translateY(-0.5em); }
+    #header .hamburger .bar::after {
+      transform: translateY(0.5em); }
+  #header .hamburger.active::before {
+    animation: none; }
+  #header .hamburger.active .bar {
+    background-color: transparent;
+    transform-style: preserve-3d;
+    height: .3em; }
+    #header .hamburger.active .bar::before {
+      background-color: #ead2a1;
+      transform: translateY(0) skewY(40deg); }
+    #header .hamburger.active .bar::after {
+      background-color: #ead2a1;
+      transform: translateY(0) skewY(-40deg) skewX(0); }
+
 .container {
   min-height: 100vh;
   width: 100%;
@@ -109,83 +193,6 @@ hamburger
     color: #485563; } }
 
 /* end of section title span animation */
-#header .hamburger {
-  height: 50px;
-  width: 50px;
-  margin: 5px auto;
-  display: inline-block;
-  border-radius: 50%;
-  position: relative;
-  background: #29323c;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-  cursor: pointer;
-  transform: scale(0.8);
-  transition: .3s ease; }
-  #header .hamburger.hamburger:after, #header .hamburger.hamburger:before {
-    position: absolute;
-    content: "";
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    transition: .5s ease; }
-  #header .hamburger.hamburger::after {
-    opacity: 1;
-    box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 2px #000a; }
-  #header .hamburger.hamburger:before {
-    border: 2px solid #fff;
-    opacity: 0;
-    animation: ham-pulse 2.5s ease infinite .5s; }
-
-@keyframes ham-pulse {
-  50% {
-    opacity: .7;
-    border-color: #ead2a1; }
-  100% {
-    opacity: 0;
-    transform: scale(1.18); } }
-  #header .hamburger.no-pulse.hamburger::before {
-    animation: none;
-    animation-fill-mode: forwards; }
-  #header .hamburger:hover::before, #header .hamburger:focus::before {
-    animation: none; }
-  #header .hamburger:hover::after, #header .hamburger:focus::after {
-    opacity: .6; }
-  #header .hamburger:active {
-    transform: scale(0.6);
-    transition: .3s; }
-  #header .hamburger .bar {
-    height: 2px;
-    width: 30px;
-    position: relative;
-    background-color: #f4f4f4;
-    z-index: -1; }
-    #header .hamburger .bar::before, #header .hamburger .bar::after {
-      content: "";
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      left: 0;
-      background-color: #f4f4f4;
-      transition: 0.3s ease;
-      transition-property: top, bottom; }
-    #header .hamburger .bar::before {
-      bottom: 8px; }
-    #header .hamburger .bar::after {
-      top: 8px; }
-  #header .hamburger.active .bar {
-    background-color: #ead2a1; }
-    #header .hamburger.active .bar::before {
-      background-color: #ead2a1;
-      bottom: 0; }
-    #header .hamburger.active .bar::after {
-      background-color: #ead2a1;
-      top: 0; }
-
 .top-link {
   position: fixed;
   bottom: 1em;
