--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -6,6 +6,154 @@ hamburger
 
 */ 
 
+// hamburger toggle
+#header .hamburger {
+    font-size: 10px;
+    height: 4em;
+    width: 4em;
+    margin: 5px auto;
+    display: inline-block;
+    border-radius: 50%;
+    position: relative;
+    background: #29323c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    cursor: pointer;
+    // transform: scale(0.8);
+    transition: .3s ease;
+
+    // hamburger pulse
+    &.hamburger:after,
+    &.hamburger:before {
+        position: absolute;
+        content: "";
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        border: none;
+        outline: none;
+        transition: .5s ease;
+    }
+    // hamburger box shadow
+    &.hamburger::after {
+        opacity: 1;
+        box-shadow: inset 2px 2px 3px #ddda,
+                    inset -2px -2px 2px #000a;
+    }
+    // end of hamburger box shadow
+    // pulse 
+    &.hamburger:before {
+        border: .2em solid #fff;
+        opacity: 0;
+        animation: ham-pulse 2.5s ease infinite .5s;
+        @keyframes ham-pulse {
+            50% {
+                opacity: .7;
+                border-color: $span-gold;
+            }
+
+            100% {
+                opacity: 0;
+                transform: scale(1.18);
+                // border-color: #fff;
+            }
+        }
+    }
+    // end of pulse
+    // end of hamburger pulse
+
+    // js header class
+    &.no-pulse {
+        &.hamburger::before {
+            animation: none;
+            animation-fill-mode: forwards;
+        }
+    }
+    // end of js header class
+    // hamburger states
+    &:hover,
+    &:focus {
+    // no animation on hover
+        &::before {
+            animation: none;
+        }
+        // no animation on hover
+        // box shadow dim on hover
+        &::after {
+            opacity: .6;
+        }
+        // end of box shadow dim on hover
+        
+    }
+    &:active {
+        transform: scale(.6);
+        transition: .3s;   
+    }
+    // end of hamburger states
+    // hamburger bars
+    .bar {
+        height: .2em;
+        width: 2em;
+        position: relative;
+        background-color: #f4f4f4;
+        border-radius: 50%;
+        z-index: -1;
+        transform-style: preserve-3d;
+        // top and bottom bars
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            left: 0;
+            bottom: 0;
+            background-color: #f4f4f4;
+            transition: .5s ease;
+            transform-style: preserve-3d;
+            // transition-property: top, bottom;
+        }
+        &::before {
+            // bottom: .5em;
+            transform: translateY(-.5em);
+        }
+        &::after {
+            // top: .5em;
+            transform: translateY(.5em);
+
+        }
+        // end of top and bottom bars
+    }
+        // hamburger bars active state
+        
+        &.active {
+            &::before {
+                animation: none;
+            }
+            .bar {
+                background-color: transparent;
+                transform-style: preserve-3d;
+                height: .3em;
+                &::before {
+                    background-color: $span-gold;
+                    transform: translateY(0) skewY(40deg) ;
+                }
+
+                &::after {
+                    background-color: $span-gold;
+                    transform: translateY(0) skewY(-40deg) skewX(0);
+
+                }
+            }
+        }
+
+        // end of hamburger bars active state
+    // end of hamburger bars
+}
+// end of hamburger toggle 
+
 // section containers
 .container {
     min-height: 100vh;
@@ -130,142 +278,6 @@ hamburger
     /* end of section title animations */
 }
 /* end of section title span animation */
-
-// hamburger toggle
-#header .hamburger {
-    height: 50px;
-    width: 50px;
-    margin: 5px auto;
-    display: inline-block;
-    border-radius: 50%;
-    position: relative;
-    background: #29323c;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
-    cursor: pointer;
-    transform: scale(0.8);
-    transition: .3s ease;
-
-    // hamburger pulse
-    &.hamburger:after,
-    &.hamburger:before {
-        position: absolute;
-        content: "";
-        height: 100%;
-        width: 100%;
-        border-radius: 50%;
-        border: none;
-        outline: none;
-        transition: .5s ease;
-    }
-    // hamburger box shadow
-    &.hamburger::after {
-        opacity: 1;
-        box-shadow: inset 2px 2px 3px #ddda,
-                    inset -2px -2px 2px #000a;
-    }
-    // end of hamburger box shadow
-    // pulse 
-    &.hamburger:before {
-        border: 2px solid #fff;
-        opacity: 0;
-        animation: ham-pulse 2.5s ease infinite .5s;
-        @keyframes ham-pulse {
-            50% {
-                opacity: .7;
-                border-color: $span-gold;
-            }
-
-            100% {
-                opacity: 0;
-                transform: scale(1.18);
-                // border-color: #fff;
-            }
-        }
-    }
-    // end of pulse
-    // end of hamburger pulse
-
-    // js header class
-    &.no-pulse {
-        &.hamburger::before {
-            animation: none;
-            animation-fill-mode: forwards;
-        }
-    }
-    // end of js header class
-    // hamburger states
-    &:hover,
-    &:focus {
-    // no animation on hover
-        &::before {
-            animation: none;
-        }
-        // no animation on hover
-        // box shadow dim on hover
-        &::after {
-            opacity: .6;
-        }
-        // box shadow dim on hover
-    }
-    &:active {
-        transform: scale(.6);
-        transition: .3s;
-
-        
-    }
-    // end of hamburger states
-    // hamburger bars
-    .bar {
-        height: 2px;
-        width: 30px;
-        position: relative;
-        background-color: #f4f4f4;
-        z-index: -1;
-        // top and bottom bars
-        &::before,
-        &::after {
-            content: "";
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            left: 0;
-            background-color: #f4f4f4;
-            transition: 0.3s ease;
-            transition-property: top, bottom;
-        }
-        &::before {
-            bottom: 8px;
-        }
-        &::after {
-            top: 8px;
-        }
-        // end of top and bottom bars
-    }
-        // hamburger bars active state
-        
-        &.active {
-            .bar {
-                background-color: $span-gold;
-
-                &::before {
-                    background-color: $span-gold;
-                    bottom: 0;
-                }
-
-                &::after {
-                    background-color: $span-gold;
-                    top: 0;
-                }
-            }
-        }
-
-        // end of hamburger bars active state
-    // end of hamburger bars
-}
-// end of hamburger toggle 
 
 // back to top button
 .top-link {
