removed .bar border-radius

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -98,7 +98,7 @@ hamburger
         width: 2em;
         position: relative;
         background-color: #f4f4f4;
-        border-radius: 50%;
+        // border-radius: 50%;
         z-index: -1;
         transform-style: preserve-3d;
         // top and bottom bars
