--- a/scss/style.scss
+++ b/scss/style.scss
@@ -999,145 +999,167 @@ body {
         }
         // end of read more button
         // article
-        article {
-            &.about-article {
-                // border: 1px solid red;
-                padding: .5em 1em;
-                height: 15vh;
-                overflow: hidden;
-                transition: .3s ease;
-                @media (max-width: 768px) {
-                    height: 20vh;
-                    transition: .3s ease;    
-                    padding: .5em 0;               
-                }
-                @media (max-width: 374px) {
-                    height: 31vh;           
-                }
-                // about me paragraph
-            p {
-                padding: .2em;
-                margin-bottom: 1em;
-                text-overflow: ellipsis;
-                text-align: left;
-                z-index: 1;
-                font-size: .85em;
-                font-weight: 500;
-                
-
-                &#intro::first-letter {
-                    font-size: 2.5em;
-                    float: left;
-                    background: $overlay-blue-dark;
-                    color: $span-gold;
-                    padding: 0 .1em;
-                    margin-right: .1em;
-                    border-radius: 2px;
-                    box-shadow: -3px 3px 0 #4855634b;
-                }
-                &#intro {
-                    font-weight: 600;
-                }
-                &.about-body {
-                    transition: opacity 4s ease;
-                    opacity:0 ;
-                    display: none;
-                    margin-bottom: .5em;
-                    // color: $span-gold;
-                    // padding: .3em;
-                }
-                @media (min-width:768px){
-                    font-size: 1em;
-                }
-                .fcc-link {
-                    color: $span-crimson;
-                    &:hover {
-                        color: $span-violet;
-                    }
-                }
-            }
-            
-            &.active {
-                height: 50vh;
-                transition: .5s ease;
-                @media (min-width: 768px){
-                    height: 45vh;
-                }
-                overflow-y: auto;
-                .about-body {
-                    transition: opacity 4s ease;
-                    display: block;
-                    opacity: 1;
-                }
-            }
-
-            
-        // end of about me paragraph
-        // small screens
-        // @media (max-width: 768px) {
-        //     height: 25vh;
-        // }
-            }
-            // links
-            &#cv {
-                display: flex;
-                justify-content: space-between;
-
-                @media (min-width: 1024px) {
-                    justify-content: space-evenly;
-                }
-
-                font-size: 1em;
-                background: linear-gradient(0deg, #161616, $overlay-blue-darker 10%, $overlay-blue-dark);
-                color: $span-gold;
-                margin: 0 auto;
-                padding: 1em;
-                box-shadow: inset 5px 0px 5px #c7c7c7aa,
-                            inset -5px -5px 5px #000a;
-                text-transform: uppercase;
-                border-bottom-left-radius: 5px;
-                border-bottom-right-radius: 5px;
-
-                a {
+        .article-container {
+            article {
+                &.about-article {
+                    padding: .5em 1em;
+                    height: 15vh;
+                    overflow: hidden;
                     transition: .3s ease;
-                    color: $span-gold;
-                    text-shadow: $text-shadow-sm;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    position: relative;
 
-                    i {
-                        background-image: linear-gradient(60deg, $span-gold 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
-                        background-size: 300%;
-                        background-position: right;
-                        background-clip: text;
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color: transparent;
-                        font-size: 1.5em;
-                        margin: .2em auto;
-                        text-shadow: none;
-                        animation: icon-shine 3s linear infinite alternate;
-                        // icon color animation
-                        @keyframes icon-shine {
-                            100% {
-                                background-position: left;
+                    @media (max-width: 768px) {
+                        height: 20vh;
+                        transition: .3s ease;
+                        padding: .5em 0;
+                    }
+
+                    @media (max-width: 374px) {
+                        height: 31vh;
+                    }
+
+                    // about me paragraph
+                    p {
+                        padding: .2em;
+                        margin-bottom: 1em;
+                        text-overflow: ellipsis;
+                        text-align: left;
+                        z-index: 1;
+                        font-size: .85em;
+                        font-weight: 500;
+
+
+                        &#intro::first-letter {
+                            font-size: 2.5em;
+                            float: left;
+                            background: $overlay-blue-dark;
+                            color: $span-gold;
+                            padding: 0 .1em;
+                            margin-right: .1em;
+                            border-radius: 2px;
+                            box-shadow: -3px 3px 0 #4855634b;
+                        }
+
+                        &#intro {
+                            font-weight: 600;
+                        }
+
+                        &.about-body {
+                            transition: opacity 4s ease;
+                            opacity: 0;
+                            display: none;
+                            margin-bottom: .5em;
+                            // color: $span-gold;
+                            // padding: .3em;
+                        }
+
+                        @media (min-width:768px) {
+                            font-size: 1em;
+                        }
+
+                        .fcc-link {
+                            color: $span-crimson;
+
+                            &:hover {
+                                color: $span-violet;
                             }
                         }
-                        // end of icon color animation
                     }
-                    // link hover state
-                    &:hover {
-                        transition: .3s ease;
-                        transform: scale(1.1);
-                        opacity: .8;
-                    }
-                    // end of link hover state
-                }
-            }
 
-            // end of links
-       
+                    &.active {
+                        height: 50vh;
+                        transition: .5s ease;
+
+                        @media (min-width: 768px) {
+                            height: 45vh;
+                        }
+
+                        overflow-y: auto;
+
+                        .about-body {
+                            transition: opacity 4s ease;
+                            display: block;
+                            opacity: 1;
+                        }
+                    }
+
+
+                    // end of about me paragraph
+                    // small screens
+                    // @media (max-width: 768px) {
+                    //     height: 25vh;
+                    // }
+                }
+
+                // links
+                &#cv {
+                    display: flex;
+                    justify-content: space-between;
+
+                    @media (min-width: 1024px) {
+                        justify-content: space-evenly;
+                    }
+
+                    font-size: 1em;
+                    background: linear-gradient(0deg, #161616, $overlay-blue-darker 10%, $overlay-blue-dark);
+                    color: $span-gold;
+                    margin: 0 auto;
+                    padding: 1em;
+                    box-shadow: inset 5px 0px 5px #c7c7c7aa,
+                    inset -5px -5px 5px #000a;
+                    text-transform: uppercase;
+                    border-bottom-left-radius: 5px;
+                    border-bottom-right-radius: 5px;
+
+                    a {
+                        transition: .3s ease;
+                        color: $span-gold;
+                        text-shadow: $text-shadow-sm;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        position: relative;
+
+                        i {
+                            background-image: linear-gradient(60deg, $span-gold 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+                            background-size: 300%;
+                            background-position: right;
+                            background-clip: text;
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                            font-size: 1.5em;
+                            margin: .2em auto;
+                            text-shadow: none;
+                            animation: icon-shine 3s linear infinite alternate;
+
+                            // icon color animation
+                            @keyframes icon-shine {
+                                100% {
+                                    background-position: left;
+                                }
+                            }
+
+                            // end of icon color animation
+                        }
+
+                        // link hover state
+                        &:hover {
+                            transition: .3s ease;
+                            transform: scale(1.1);
+                            opacity: .8;
+                        }
+
+                        // end of link hover state
+                    }
+                }
+
+                // end of links
+
+            }
+            // DATA-SCROLL 
+            &[data-scroll] {
+                transform: scale(1);
+                transition: 1.5s;
+            }
         }
         // article
         // cv download button on h2 hover 
