--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -36,6 +36,10 @@
             justify-content: center;
             flex-direction: column;
             z-index: 10;
+            // DATA-SCROLL
+            &[data-scroll] {
+                transform: scale(1);
+            }
             // project item
             .project-item {
                 display: flex;
