--- a/css/style.css
+++ b/css/style.css
@@ -1410,7 +1410,7 @@ body {
   top: 0;
   width: 100vw; }
   #header .header {
-    min-height: 10vh;
+    min-height: 8vh;
     transition: 1s ease background-color; }
     #header .header #navbar {
       display: flex;
@@ -1613,9 +1613,9 @@ body {
             #header .header #navbar .nav-list ul li i {
               color: #fffa;
               margin-right: .1em;
-              padding: .5em;
+              padding: .3rem .5em;
               font-size: 1em;
-              border-radius: 50%; }
+              border-radius: 5px; }
             #header .header #navbar .nav-list ul li:hover a {
               transition: .3s ease;
               color: #ead2a1; }
