--- a/scss/style.scss
+++ b/scss/style.scss
@@ -543,7 +543,8 @@ body {
             border: none;
             outline: none;
             opacity: 1;
-            transform: rotateX(-90deg);
+            // transform: rotateX(-90deg);
+            transform: scaleY(0);
             transform-style: preserve-3d;
             animation: show-cta 4s 5.5s;
             animation-fill-mode: forwards;
@@ -557,7 +558,7 @@ body {
             @keyframes show-cta {
                 100% {
                     opacity: 1;
-                    transform: rotateX(0) translateY(5%);
+                    transform: scale(1);
                 }
             }
 
